youtube-clone-ui/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/use-regex: "true"
#    cert-manager.io/cluster-issuer: frontendissuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - utube.kendoc.vip  # Replace with your cluster DNS name
      secretName: utubes-tls
  rules:
    - host: utube.kendoc.vip # Replace with your cluster DNS name
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8080
